tests/runner/src/snapshots/tlang_test_runner__tests__enums_result_javascript@enums__result.tlang.snap
---
source: tests/runner/src/main.rs
description: "Backend: javascript"
expression: "apply_redactions(&output, workspace_root)"
input_file: tests/enums/result.tlang
---
true
false
false
true
10

file://[WORKSPACE_ROOT]/[eval1]:159
  throw new Error(msg);
        ^

Error: Called unwrap on Err
    at panic (file://[WORKSPACE_ROOT]/[eval1]:159:9)
    at Result.unwrap$0 [as unwrap] (file://[WORKSPACE_ROOT]/[eval1]:78:18)
    at file://[WORKSPACE_ROOT]/[eval1]:378:17
    at ModuleJob.run (node:internal/modules/esm/module_job:303:25)
    at process.processTicksAndRejections (node:internal/process/task_queues:105:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:269:26)
    at async ModuleLoader.executeModuleJob (node:internal/modules/esm/loader:266:20)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:99:5)

Node.js v24.0.2
